# systemstoolkit

./: .coveragerc  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
data/: 3le.txt  AttitudeTimeAzElAngles.sp
src/stkfiles/: api.py  builder.py  files.py  keywords.py  units.py  utils.py
src/systemstoolkit/: __init__.py  exceptions.py  typing.py  utils.py
src/systemstoolkit/connect/: __init__.py  session.py  validators.py
src/systemstoolkit/connect/commands/: __init__.py  base.py
src/systemstoolkit/connect/objects/: __init__.py  base.py  facilities.py  mixins.py  satellite.py  sensor.py  sensors.py  vehicles.py
src/systemstoolkit/connect/objects/mixins/: __init__.py  constraints.py  states.py
src/systemstoolkit/files/: __init__.py  builders.py  files.py  formats.py  keywords.py  validators.py
src/systemstoolkit/units/: time.py
tests/: test_api.py  test_files.py  test_keywords.py  test_timeunits.py  test_units_time.py  test_utils.py
tests/connect/: test_commands.py  test_objects.py  test_satellite.py  test_session.py  test_validators.py
tests/connect/objects/: test_constraints.py  test_places.py  test_sensor.py  test_vehicles.py
tests/files/: test_builders.py  test_files.py  test_formats.py  test_keywords.py  test_make_files.py  test_validators.py
