[metadata]
name = stkfiles
version = attr: stkfiles.__version__
description = Object-oriented creation of Systems ToolKit (STK) data files
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
    enforce_typing
    dateutils

[options.packages.find]
where = src
